--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <doctype html>
 <html>
   <head>
-    <title>Christopher Zuniga
+    <title>Christopher Zuniga </title>
   </head>
     <body>
       <h1>Hello, my name is Christopher Zuniga</h1>
