--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       <h1>Hello, my name is Christopher Zuniga</h1>
       <img src=images/profile-picture.jpg width=500px height=500px/>
       <p>Welcome to my webpage.<br>
-         I am a student in the <a href="https://www.geo.txstate.edu/">Geography Department</a> at <a href="https://txstate.edu"> Texas State University</a></p>
+         I am a student in the
+         <a href="https://www.geo.txstate.edu/">Geography Department</a> at
+         <a href="https://txstate.edu"> Texas State University</a></p>
       <p>Research Interests<p/>
     </body>
 </html>
