--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
          I am a student in the
          <a href="https://www.geo.txstate.edu/" target=_blank>Geography Department</a> at
          <a href="https://txstate.edu" target=_blank> Texas State University</a></p>
-      <p>Research Interests<p/>
+      <p>Research Interests:
+        <ul>
+          <li>GIS</li>
+          <li>CIS</li>
+          <li>Natural Resource Conservation</li>
+        </ul>
+        </p>
     </body>
 </html>
