--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <body>
       <h1>Hello, my name is Christopher Zuniga</h1>
       <img src=images/profile-picture.jpg width=500px height=500px/>
-      <p>Welcome to my webpage.<br>
+      <p>
+        Welcome to my webpage. <br>
          I am a student in the
          <a href="https://www.geo.txstate.edu/" target=_blank>Geography Department</a> at
-         <a href="https://txstate.edu" target=_blank> Texas State University</a></p>
-      <p>Research Interests:
+         <a href="https://txstate.edu" target=_blank> Texas State University</a>.
+       </p>
+      <p>
+        <h3>Research Interests:</h3>
         <ul>
           <li>GIS</li>
           <li>CIS</li>
