--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Christopher Zuniga </title>
+    <link rel="stylesheet" type="text/css" href="css/main_style.css"
   </head>
     <body>
       <h1>Hello, my name is Christopher Zuniga</h1>
