--- a/index.html
+++ b/index.html
@@ -2,24 +2,32 @@
 <html>
   <head>
     <title>Christopher Zuniga </title>
+    <!-- ALL styling for this HTML document are conatined in this external css
+     file -->
     <link rel="stylesheet" type="text/css" href="css/main_style.css"
   </head>
-    <body>
-      <h1>Hello, my name is Christopher Zuniga</h1>
+  <body>
+    <div id="body-container">
+      <div id="header">
+        <h1>Hello, my name is Christopher Zuniga</h1>
+    </div>
+    <div id="profile-picture">
       <img src=images/profile-picture.jpg width=500px height=500px/>
-      <p>
-        Welcome to my webpage. <br>
-         I am a student in the
-         <a href="https://www.geo.txstate.edu/" target=_blank>Geography Department</a> at
-         <a href="https://txstate.edu" target=_blank> Texas State University</a>.
-       </p>
-      <p>
-        <h3>Research Interests:</h3>
-        <ul>
-          <li>GIS</li>
-          <li>CIS</li>
-          <li>Natural Resource Conservation</li>
-        </ul>
-        </p>
-    </body>
+    </div>
+    <div id="welcome-text">
+      Welcome to my webpage. <br>
+        I am a student in the
+        <a href="https://www.geo.txstate.edu/" target=_blank>Geography Department</a> at
+        <a href="https://txstate.edu" target=_blank> Texas State University</a>.
+    </div>
+    <div id="research-interests">
+      <h3>Research Interests:</h3>
+      <ul>
+        <li>GIS</li>
+        <li>CIS</li>
+        <li>Natural Resource Conservation</li>
+      </ul>
+    </div>
+  </div>
+</body>
 </html>
