--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <!-- ALL styling for this HTML document are conatined in this external css
      file -->
     <link rel="stylesheet" type="text/css" href="css/main_style.css"
+  <script>
+   <script src="javascript/external.js"></script>
+ </script>
   </head>
   <body>
     <div id="body-container">
