completeed task 3 and 4

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      file -->
     <link rel="stylesheet" type="text/css" href="css/main_style.css"
   <script>
-   <script src="javascript/external.js"></script>
+   <script src="javasscript/external.js"></script>
  </script>
   </head>
   <body>
