--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <!-- ALL styling for this HTML document are conatined in this external css
      file -->
     <link rel="stylesheet" type="text/css" href="css/main_style.css"
-  <script>
-   <script src="javasscript/external.js"></script>
- </script>
   </head>
   <body>
     <div id="body-container">
       <div id="header">
-        <h1>Hello, my name is Christopher Zuniga</h1>
+      <h1>Hello, weclome <script src="javasscript/external.js"></script></h1>
     </div>
     <div id="profile-picture">
       <img src=images/profile-picture.jpg width=500px height=500px/>
     </div>
     <div id="welcome-text">
+      My name is Christopher Zuniga <br>
       Welcome to my webpage. <br>
         I am a student in the
         <a href="https://www.geo.txstate.edu/" target=_blank>Geography Department</a> at
@@ -33,4 +31,17 @@
     </div>
   </div>
 </body>
+<div id="copyright">
+ <script>
+  /*The code below creates and sets a variable as "today" to match/reference
+  the current date.*/
+  var today = new Date();
+  /*This next line makes a variable that returns just the year from the current
+  date.*/
+  var year = today.getFullYear();
+  /*This line is used to write the copyright sign with the copy sign and
+   current year next to it.*/
+  document.writeln("Copyright&copy;"+ year)
+ </script>
+</div>
 </html>
