--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <title>Christopher Zuniga </title>
     <!-- ALL styling for this HTML document are conatined in this external css
      file -->
-    <link rel="stylesheet" type="text/css" href="css/main_style.css"
+    <link rel="stylesheet" type="text/css" href="css/main_style.css">
+    <script src="javasscript/external.js"></script>
   </head>
   <body>
     <div id="body-container">
       <div id="header">
-      <h1>Hello, weclome <script src="javasscript/external.js"></script></h1>
+      <h1>Hello Welcome
+
+        <script>
+          document.write(welcome())
+        </script>
+      </h1>
     </div>
     <div id="profile-picture">
       <img src=images/profile-picture.jpg width=500px height=500px/>
