--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8"/>
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
       <script src="javasscript/external.js"></script>
-
-    <script src="javasscript/secret_keys.js"></script>
+      <script src="javasscript/secret_keys.js"></script>
 
     <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
     integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
@@ -24,6 +23,9 @@
     <link
     href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css'
     rel='stylesheet' />
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@opencage/leaflet opencage-geosearch/leaflet-opencage-geosearch.css" />
+
 
     <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
 
@@ -73,6 +75,20 @@
           <script>
             //var mymap = L.map('mapid').setView([51.505, -0.09], 13);
             var mymap = L.map('mapid');
+            // var options = {
+            //   key: 'cb6194a881934bf5a6cdf9adc347c879',
+            //   limit: 10
+            // };
+            // var geosearchControl =
+            // L.Control.openCageGeosearch(options).addTo(mymap);
+            L.tileLayer(
+            'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+            id: 'mapbox/navigation-day-v1',
+            accessToken: mapbox_access_token,
+            }).addTo(mymap);
+
+
+
             // L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?access_token = {accessToken}',
             // {
             //   maxZoom: 18,
@@ -81,11 +97,12 @@
             //
             // }).addTo(mymap);
 
-            L.tileLayer(
-            'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-            id: 'mapbox/navigation-day-v1',
-            accessToken: mapbox_access_token,
-            }).addTo(mymap);
+
+
+            // L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png',
+            //  {}).addTo(mymap);
+
+
 
                var marker = L.marker([51.5, -0.09]).addTo(mymap);
                  marker.bindPopup("<b>Hello world!</b><br>I am a pop-up.").openPopup();
@@ -120,7 +137,7 @@
                       [51.506, -0.08],
                       [51.502, -0.06],
                       [51.507, -0.047],
-                    ]).addTo(mymap)
+                    ]).addTo(mymap);
               var ZoomViewer = L.Control.extend({onAdd: function()
                 {
                   var gauge = L.DomUtil.create('div');
