--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
       <script src="javasscript/external.js"></script>
       <script src="javasscript/secret_keys.js"></script>
+      <script src="javasscript/map.js"></script>
 
     <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
     integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
@@ -66,14 +67,14 @@
     </div>
     <div id= "webmap-reviews">
       <h3>Webmap Reviews</h3>
-      <!-- <script>
+      <script>
         document.write(webmap_table())
-      </script> -->
+      </script>
     </div>
-      <h3>My First Webmap</h3>
-        <div id = "mapid" style="width: 600px; height: 400px; margin: auto;">
-          <script>
-            //var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+      <h3>Geocoding Map</h3>
+        <div id= "mapid" style="width: 600px; height: 400px; margin: auto;">
+          <script src= "javvascript/map.js"></script>
+          <script>  //var mymap = L.map('mapid').setView([51.505, -0.09], 13);
             var mymap = L.map('mapid');
             // var options = {
             //   key: 'cb6194a881934bf5a6cdf9adc347c879',
@@ -101,15 +102,48 @@
 
             // L.tileLayer('https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png',
             //  {}).addTo(mymap);
-
-
-
-               var marker = L.marker([51.5, -0.09]).addTo(mymap);
-                 marker.bindPopup("<b>Hello world!</b><br>I am a pop-up.").openPopup();
+               var marker = L.marker([27.17, 78.04]).addTo(mymap);
+                 marker.bindPopup("Taj Mahal").openPopup();
                  marker.on('click', function(e)
                  {
                    mymap.setView(e.latlng, 14);
                  })
+                 var Wall = L.marker([40.33, 116.48]).addTo(mymap);
+                   marker.bindPopup("Great Wall China").openPopup();
+                   marker.on('click', function(e)
+                   {
+                     mymap.setView(e.latlng, 14);
+                   })
+                   var Petra = L.marker([30.32, 35.44]).addTo(mymap);
+                      marker.bindPopup("Petra").openPopup();
+                      marker.on('click', function(e)
+                      {
+                        mymap.setView(e.latlng, 14);
+                      })
+                       var BrazilChrist = L.marker([-22.95, -43.21]).addTo(mymap);
+                         marker.bindPopup("Brazil Christ").openPopup();
+                         marker.on('click', function(e)
+                         {
+                           mymap.setView(e.latlng, 14);
+                         })
+                         var MacchuPichu = L.marker([-13.16, -72.55]).addTo(mymap);
+                           marker.bindPopup("MacchuPichu").openPopup();
+                           marker.on('click', function(e)
+                           {
+                             mymap.setView(e.latlng, 14);
+                           })
+                           var ChichenItza = L.marker([20.68, -88.57]).addTo(mymap);
+                             marker.bindPopup("ChichenItza").openPopup();
+                             marker.on('click', function(e)
+                             {
+                               mymap.setView(e.latlng, 14);
+                             })
+                             var Colosseum = L.marker([41.89, 12.49]).addTo(mymap);
+                               marker.bindPopup("Colosseum").openPopup();
+                               marker.on('click', function(e)
+                               {
+                                 mymap.setView(e.latlng, 14);
+                               })
                var circle = L.circle([51.508, -0.11],
                  {
                    color: 'red',
@@ -153,8 +187,7 @@
             });
             (new ZoomViewer).addTo(mymap);
             mymap.setView([0,0], 1);
-
-          </script>
+</script>
         </div>
 </body>
 <div id="copyright">
