get element by id

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <h3>Geocoding Map</h3>
         <div id= "mapid" style="width: 600px; height: 400px; margin: auto;">
           <script src= "javvascript/map.js"></script>
+          <script>document.getElementById(mymap)</script>
           <!-- <script>
             var mymap = L.map('mapid').setView([51.505, -0.09], 13);
             var mymap = L.map('mapid');
