--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     </div>
       <h3>Geocoding Map</h3>
         <div id= "mapid" style="width: 600px; height: 400px; margin: auto;">
-          <script src= "javasscript/map.js"></script>
+          <!-- <script src= "javasscript/map.js"></script> -->
           <!-- <script>document.getElementById(mymap)</script> -->
-          <!-- <script>
+          <script>
             var mymap = L.map('mapid').setView([51.505, -0.09], 13);
             var mymap = L.map('mapid');
 
@@ -168,7 +168,7 @@
               }
             });
             (new ZoomViewer).addTo(mymap);
-            mymap.setView([0,0], 1); -->
+            mymap.setView([0,0], 1);
 
         </div>
 </body>
