added closing script

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             });
             (new ZoomViewer).addTo(mymap);
             mymap.setView([0,0], 1);
+        </script>
 
         </div>
 </body>
