--- a/index.html
+++ b/index.html
@@ -72,17 +72,20 @@
     </div>
       <h3>Geocoding Map</h3>
         <div id= "mapid" style="width: 600px; height: 400px; margin: auto;">
-          <!-- <script src= "javasscript/map.js"></script> -->
+          <script src= "javasscript/map.js"></script>
           <!-- <script>document.getElementById(mymap)</script> -->
           <script>
             var mymap = L.map('mapid').setView([51.505, -0.09], 13);
             var mymap = L.map('mapid');
 
-            L.tileLayer(
-            'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-            id: 'mapbox/navigation-day-v1',
-            accessToken: mapbox_access_token,
-            }).addTo(mymap);
+            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+}).addTo(mymap);
+
+            // L.tileLayer(
+            // 'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+            // id: 'mapbox/navigation-day-v1',
+            // accessToken: mapbox_access_token,
+            // }).addTo(mymap);
 
                var marker = L.marker([27.17, 78.04]).addTo(mymap);
                  marker.bindPopup("Taj Mahal").openPopup();
