--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
       <script src="javasscript/external.js"></script>
       <script src="javasscript/secret_keys.js"></script>
-
+      <script src="javasscript/external.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
     integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
     crossorigin="">
@@ -75,7 +75,7 @@
           <script src= "javasscript/map.js"></script>
           <!-- <script>document.getElementById(mymap)</script> -->
           <script>
-            var mymap = L.map('mapid').setView([51.505, -0.09], 13);
+            // var mymap = L.map('mapid').setView([51.505, -0.09], 13);
             var mymap = L.map('mapid');
 
 //             L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
