--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
       <script src="javasscript/external.js"></script>
       <script src="javasscript/secret_keys.js"></script>
-
+      <script src="javasscript/external.js"></script>
     <script src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
     integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
     crossorigin="">
@@ -73,25 +73,14 @@
       <h3>Geocoding Map</h3>
         <div id= "mapid" style="width: 600px; height: 400px; margin: auto;">
           <script src= "javasscript/map.js"></script>
-          <!-- <script>document.getElementById(mymap)</script> -->
-          <script>
+          <script>document.getElementById(mymap)</script>
+          <!-- <script>
             var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-            var mymap = L.map('mapid');
+            // var mymap = L.map('mapid');
+            L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+}).addTo(mymap);
 
-//             L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-// }).addTo(mymap);
 
-            // L.tileLayer(
-            // 'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
-            // id: 'mapbox/navigation-day-v1',
-            // accessToken: mapbox_access_token,
-            // }).addTo(mymap);
-            L.tileLayer(
-            'https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?acces
-            s_token={accessToken}', {
-            id: 'mapbox/dark-v10',
-            accessToken: mapbox_access_token,
-            }).addTo(mymap);
                var marker = L.marker([27.17, 78.04]).addTo(mymap);
                  marker.bindPopup("Taj Mahal").openPopup();
                  marker.on('click', function(e)
@@ -177,7 +166,7 @@
             });
             (new ZoomViewer).addTo(mymap);
             mymap.setView([0,0], 1);
-        </script>
+        </script> -->
 
         </div>
 </body>
