--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     crossorigin="">
     </script>
 
-    <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'>
-    </script>
+    <!-- <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'>
+    </script> -->
 
     <title>Christopher Zuniga </title>
     <!-- ALL styling for this HTML document are conatined in this external css
@@ -20,16 +20,16 @@
      <link rel ="stylesheet" type="text/css"
        href="css/map_styles.css">
     <link rel="stylesheet" type="text/css" href="css/main_style.css">
-    <link
+    <!-- <link
     href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css'
-    rel='stylesheet' />
-    <link rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@opencage/leaflet opencage-geosearch/leaflet-opencage-geosearch.css" />
+    rel='stylesheet' /> -->
+    <!-- <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@opencage/leaflet opencage-geosearch/leaflet-opencage-geosearch.css" /> -->
 
-
+<!--
     <script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
 
-    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' /> -->
 
     <link rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.1/dist/leaflet.css"
